Change platform build option to be a filter (#271)
* Change build platforms option to a filter

* Move build.feature args to with arguments fixture call

* Fix build.feature typos

* Add test for filtering with platform filter on config

* Add platform filter option to dgoss target generation and execution

* Add test for dgoss platform option

* Fix comment spelling

Co-authored-by: Benjamin R. J. Schwedler <ben@posit.co>

* Leave an expected default platform in complex.yaml

* Remove full image checks for multiplatform builds

---------

Co-authored-by: Benjamin R. J. Schwedler <ben@posit.co>

--- a/posit-bakery/test/testdata/valid/complex.yaml
+++ b/posit-bakery/test/testdata/valid/complex.yaml
@@ -79,14 +79,24 @@ images:
         stream: "preview"
         os:
           - name: "Ubuntu 22.04"
+            platforms:
+              - "linux/amd64"
           - name: "Ubuntu 24.04"
+            platforms:
+              - "linux/amd64"
+              - "linux/arm64"
             primary: true
       - sourceType: "stream"
         product: "package-manager"
         stream: "daily"
         os:
           - name: "Ubuntu 22.04"
+            platforms:
+              - "linux/amd64"
           - name: "Ubuntu 24.04"
+            platforms:
+              - "linux/amd64"
+              - "linux/arm64"
             primary: true
     versions:
       - name: "2025.04.2-8"
@@ -95,6 +105,9 @@ images:
         os:
           - name: "Ubuntu 22.04"
           - name: "Ubuntu 24.04"
+            platforms:
+              - "linux/amd64"
+              - "linux/arm64"
             primary: true
         dependencies:
           - dependency: R
@@ -105,6 +118,8 @@ images:
         subpath: "2025.04.0"
         os:
           - name: "Ubuntu 22.04"
+            platforms:
+              - "linux/amd64"
             primary: true
         dependencies:
           - dependency: R
