Add multiplatform native builder CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,21 @@ jobs:
       context: "./posit-bakery/test/resources/with-macros/"
       dev-versions: include
 
+  bakery-native:
+    name: Bakery Native Build
+    permissions:
+      contents: read
+      packages: write
+
+    uses: "./.github/workflows/bakery-build-native.yml"
+    secrets:
+      APP_ID: ${{ secrets.APP_ID }}
+      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+    with:
+      version: ${{ github.head_ref || github.ref_name }}
+      context: "./posit-bakery/test/resources/multiplatform/"
+      dev-versions: include
+
   clean-caches:
     name: Clean Caches
     permissions:
