Try merging files down to a single directory

--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -192,7 +192,7 @@ jobs:
       - name: Upload Metadata
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ matrix.img.image }}-${{ matrix.img.version }}-${{ steps.normalize-platform.outputs.platform }}-metadata.json"
+          name: "${{ matrix.img.image }}-${{ matrix.img.version }}-${{ steps.normalize-platform.outputs.platform }}-metadata"
           path: "./${{ matrix.img.image }}-${{ matrix.img.version }}-${{ steps.normalize-platform.outputs.platform }}-metadata.json"
           overwrite: 'true'
 
@@ -256,7 +256,8 @@ jobs:
       - name: Download Metadata
         uses: actions/download-artifact@v5
         with:
-          pattern: "${{ matrix.img.image }}-${{ matrix.img.version }}-*-metadata.json"
+          pattern: "${{ matrix.img.image }}-${{ matrix.img.version }}-*-metadata"
+          merge-multiple: true
 
       - name: List files
         run: |
