--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,21 +115,38 @@ jobs:
       context: "./posit-bakery/test/resources/with-macros/"
       dev-versions: include
 
+  bakery-native:
+    name: Bakery Native Build
+    permissions:
+      contents: read
+      packages: write
+
+    uses: "./.github/workflows/bakery-build-native.yml"
+    secrets:
+      APP_ID: ${{ secrets.APP_ID }}
+      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+    with:
+      version: ${{ github.head_ref || github.ref_name }}
+      context: "./posit-bakery/test/resources/multiplatform/"
+      dev-versions: include
+
   clean-caches:
     name: Clean Caches
     permissions:
       contents: read
       packages: write
 
-    uses: "./.github/workflows/clean-caches.yml"
+    uses: "./.github/workflows/clean.yml"
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
     with:
       version: ${{ github.head_ref || github.ref_name }}
       context: "./posit-bakery/test/resources/with-macros/"
-      remove-dangling: true
-      remove-older-than: 14
+      remove-dangling-caches: true
+      remove-caches-older-than: 14
+      remove-dangling-temporary-images: false
+      remove-temporary-images-older-than: 3
 
   release:
     name: Release/Snapshot
