--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -120,7 +120,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          bakery clean cache-registry "ghcr.io/${{ github.repository_owner }}" \
+          bakery clean temp-registry "ghcr.io/${{ github.repository_owner }}" \
             --context ${{ inputs.context }} \
             ${{ inputs.dry-run && '--dry-run' || '' }} \
             ${{ !inputs.remove-dangling-temporary-images && '--no-untagged' || '--untagged' }} \
