Make GitHub App secrets inputs optional
Now that the repository is public, we no longer need to use GitHub App
authentication for cross-repository workflow invocations.

Step 1 is making these parameters optional. A follow-up PR will be
required to remove them completely after consuming workflows no longer
use them.

--- a/.github/workflows/bakery-build.yml
+++ b/.github/workflows/bakery-build.yml
@@ -48,10 +48,10 @@ on:
       # TODO: Remove secret requirements once repository is public
       APP_ID:
         description: "GitHub App ID with access to posit-dev repositories"
-        required: true
+        required: false
       APP_PRIVATE_KEY:
         description: "GitHub App private key with access to posit-dev repositories"
-        required: true
+        required: false
 
 defaults:
   run:
@@ -68,19 +68,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-          owner: posit-dev
-          repositories: images-shared
-
       - name: Install
         uses: "posit-dev/images-shared/setup-bakery@main"
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           version: ${{ inputs.version }}
 
@@ -102,19 +91,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-          owner: posit-dev
-          repositories: images-shared
-
       - name: Setup bakery
         uses: "posit-dev/images-shared/setup-bakery@main"
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           version: ${{ inputs.version }}
 
