--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -57,10 +57,10 @@ on:
       # TODO: Remove secret requirements once repository is public
       APP_ID:
         description: "GitHub App ID with access to posit-dev repositories"
-        required: true
+        required: false
       APP_PRIVATE_KEY:
         description: "GitHub App private key with access to posit-dev repositories"
-        required: true
+        required: false
 
 defaults:
   run:
@@ -78,19 +78,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-          owner: posit-dev
-          repositories: images-shared
-
       - name: Install
         uses: "posit-dev/images-shared/setup-bakery@main"
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           version: ${{ inputs.version }}
 
@@ -116,19 +105,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-          owner: posit-dev
-          repositories: images-shared
-
       - name: Setup bakery
         uses: "posit-dev/images-shared/setup-bakery@main"
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           version: ${{ inputs.version }}
 
@@ -248,19 +226,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
-          owner: posit-dev
-          repositories: images-shared
-
       - name: Setup bakery
         uses: "posit-dev/images-shared/setup-bakery@main"
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           version: ${{ inputs.version }}
 
