--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
     needs:
       - test
       - bakery
+      - bakery-native
       - release
 
     steps:
@@ -107,9 +108,6 @@ jobs:
       packages: write
 
     uses: "./.github/workflows/bakery-build.yml"
-    secrets:
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
     with:
       version: ${{ github.head_ref || github.ref_name }}
       context: "./posit-bakery/test/resources/with-macros/"
@@ -122,9 +120,6 @@ jobs:
       packages: write
 
     uses: "./.github/workflows/bakery-build-native.yml"
-    secrets:
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
     with:
       version: ${{ github.head_ref || github.ref_name }}
       context: "./posit-bakery/test/resources/multiplatform/"
@@ -137,9 +132,6 @@ jobs:
       packages: write
 
     uses: "./.github/workflows/clean.yml"
-    secrets:
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
     with:
       version: ${{ github.head_ref || github.ref_name }}
       context: "./posit-bakery/test/resources/with-macros/"
@@ -151,7 +143,10 @@ jobs:
   release:
     name: Release/Snapshot
     if: (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') || github.event_name == 'pull_request')
-    needs: [test, bakery]
+    needs:
+      - test
+      - bakery
+      - bakery-native
     runs-on: ubuntu-latest
 
     steps:
