Try `docker` buildkit driver on merge job

--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -319,6 +319,8 @@ jobs:
 
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: "docker"
 
       - name: Download Metadata
         uses: actions/download-artifact@v5
