--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -287,7 +287,13 @@ jobs:
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
         with:
-          driver: "docker"
+          buildkitd-config-inline: |
+            [registry."docker.io"]
+              http = true
+              insecure = true
+            [registry."ghcr.io"]
+              http = true
+              insecure = true
 
       - name: Download Metadata
         uses: actions/download-artifact@v5
