Test registry container service

--- a/posit-bakery/test/pytest.ini
+++ b/posit-bakery/test/pytest.ini
@@ -13,6 +13,8 @@ markers =
     goss: Goss tool tests
     build: Docker buildx build tests
     bake: Docker buildx bake tests
+    container: Container related tests that leverage Docker
+    service: Service related tests that manage a companion service to Bakery
     disable_patch_revision: Disable revision patching for this test
     disable_patch_datetime_now: Disable datetime.now patching for this test
 
