--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -27,8 +27,8 @@ on:
         default: false
         required: false
         type: boolean
-      runs-on:
-        description: "The type of runner to use [default: ubuntu-latest]"
+      merge-builder:
+        description: "The type of runner to use for merging. Larger images require expanded runners. [default: ubuntu-latest]"
         default: "ubuntu-latest"
         required: false
         type: string
@@ -69,7 +69,7 @@ defaults:
 jobs:
   matrix:
     name: Image Matrix
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: ubuntu-latest
     outputs:
       platform-matrix: ${{ steps.images-by-platform.outputs.platform_matrix }}
       versions-matrix: ${{ steps.images-by-version.outputs.versions_matrix }}
@@ -220,7 +220,7 @@ jobs:
       fail-fast: false
       matrix:
         img: ${{ fromJson(needs.matrix.outputs.versions-matrix) }}
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: ${{ inputs.merge-builder }}
 
     steps:
       - name: Checkout
@@ -286,14 +286,6 @@ jobs:
 
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [registry."docker.io"]
-              http = true
-              insecure = true
-            [registry."ghcr.io"]
-              http = true
-              insecure = true
 
       - name: Download Metadata
         uses: actions/download-artifact@v5
