--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -27,8 +27,8 @@ on:
         default: false
         required: false
         type: boolean
-      runs-on:
-        description: "The type of runner to use [default: ubuntu-latest]"
+      merge-builder:
+        description: "The type of runner to use for merging. Larger images require expanded runners. [default: ubuntu-latest]"
         default: "ubuntu-latest"
         required: false
         type: string
@@ -62,7 +62,7 @@ defaults:
 jobs:
   matrix:
     name: Image Matrix
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: ubuntu-latest
     outputs:
       platform-matrix: ${{ steps.images-by-platform.outputs.platform_matrix }}
       versions-matrix: ${{ steps.images-by-version.outputs.versions_matrix }}
@@ -213,7 +213,7 @@ jobs:
       fail-fast: false
       matrix:
         img: ${{ fromJson(needs.matrix.outputs.versions-matrix) }}
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: ${{ inputs.merge-builder }}
 
     steps:
       - name: Checkout
@@ -233,8 +233,6 @@ jobs:
                 "containerd-snapshotter": true
               }
             }
-      - name: Setup docker buildx
-        uses: docker/setup-buildx-action@v3
 
       # Since secrets cannot be referenced in an `if` condition directly,
       # this step sets an output that we can reference later.
@@ -278,6 +276,9 @@ jobs:
       - name: Login to Amazon ECR
         if: ${{ inputs.push && steps.filter-steps.outputs.ecr == 'true' }}
         uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Setup docker buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Download Metadata
         uses: actions/download-artifact@v5
