--- a/posit-bakery/test/resources/matrix/bakery.yaml
+++ b/posit-bakery/test/resources/matrix/bakery.yaml
@@ -20,11 +20,11 @@ images:
       dependencyConstraints:
         - dependency: R
           constraint:
-            min: 4.0
+            count: 2
             latest: true
         - dependency: python
           constraint:
-            min: 3.10
+            count: 2
             latest: true
         - dependency: quarto
           constraint:
